# PicoSensors

./: LICENSE  README.md
Arduino/AnalogSensors/analoghall_arduino/: analoghall_arduino.ino
Arduino/AnalogSensors/joy_arduino/: joy_arduino.ino
Arduino/AnalogSensors/ldr_arduino/: ldr_arduino.ino
Arduino/AnalogSensors/ledsensor_arduino/: ledsensor_arduino.ino
Arduino/AnalogSensors/phototran_arduino/: phototran_arduino.ino
Arduino/AnalogSensors/potentiometer_arduino/: potentiometer_arduino.ino
Arduino/BasicDigitalSensors/button_arduino/: button_arduino.ino
Arduino/BasicDigitalSensors/flame_arduino/: flame_arduino.ino
Arduino/BasicDigitalSensors/gas_arduino/: gas_arduino.ino
Arduino/BasicDigitalSensors/hall_arduino/: hall_arduino.ino
Arduino/BasicDigitalSensors/keypad_arduino/: keypad_arduino.ino
Arduino/BasicDigitalSensors/pir_arduino/: pir_arduino.ino
Arduino/BasicDigitalSensors/sound_arduino/: sound_arduino.ino
Arduino/BasicDigitalSensors/vibration_arduino/: vibration_arduino.ino
Arduino/Fingerprint/Fingerprint_arduino/: Fingerprint_arduino.ino
Arduino/Misc/hcsr04_arduino/: hcsr04_arduino.ino
Arduino/Misc/ibutton_arduino/: ibutton_arduino.ino
Arduino/Misc/loadcell_arduino/: loadcell_arduino.ino
Arduino/Misc/rotary_arduino/: encoder.pio.h  rotary_arduino.ino
Arduino/Movement/adxl345_arduino/: adxl345_arduino.ino
Arduino/Movement/mma8452_arduino/: mma8452_arduino.ino
Arduino/Movement/mpu6050_arduino/: mpu6050_arduino.ino
Arduino/Movement/xmc5883_arduino/: xmc5883_arduino.ino
Arduino/Pressure/bmp180_arduino/: bmp180_arduino.ino
Arduino/Pressure/bmp280_arduino/: bmp280_arduino.ino
Arduino/Pressure/bmp390_arduino/: bmp390_arduino.ino
Arduino/RFID/mifare_arduino/: mifare_arduino.ino
Arduino/RFID/rfid125_arduino/: rfid125_arduino.ino
Arduino/Temperature/aht10_arduino/: aht10_arduino.ino
Arduino/Temperature/dht_arduino/: dht_arduino.ino
Arduino/Temperature/ds18b20_arduino/: ds18b20_arduino.ino
Arduino/Temperature/hdc1080_arduino/: hdc1080_arduino.ino
Arduino/Temperature/lm35_tmp36_arduino/: lm35_tmp36_arduino.ino
Arduino/Temperature/lm75a_arduino/: lm75a_arduino.ino
Arduino/Temperature/mcp9808_arduino/: mcp9808_arduino.ino
Arduino/Temperature/thermistor_arduino/: thermistor_arduino.ino
CircuitPython/AnalogSensors/: analoghall_cpython.py  joy_cpython.py  ldr_cpython.py  ledsensor_cpython.py  phototran_cpython.py  potentiometer_cpython.py
CircuitPython/BasicDigitalSensors/: button_cpython.py  flame_cpython.py  gas_cpython.py  hall_cpython.py  keypad_cpython.py  pir_cpython.py  vibration_cpython.py
CircuitPython/Fingerprint/: fingerdemo_cpython.py  fingersensor_cpython.py
CircuitPython/Misc/: hcsr04_cpython.py  ibutton_cpython.py  rotary_cpython.py
CircuitPython/Misc/loadcell/: i2c_lcd.py  loadcell_cpython.py
CircuitPython/Movement/: adxl345_cpython.py  mma8452_cpython.py  mpu6050_cpython.py  qmc5883l_cpython.py
CircuitPython/Pressure/: bme280_cpython.py  bmp180_cpython.py  bmp390_cpython.py
CircuitPython/RFID/: mifare_cpython.py  rfid125_cpython.py
CircuitPython/Temperature/: aht10_cpython.py  dht_cpython.py  ds18b20_cpython.py  hdc1080_cpython.py  lm35_tmp36_cpython.py  lm75a_cpython.py  mcp9808_cpython.py  thermistor_cpython.py
MicroPython/AnalogSensors/: analoghall_mpython.py  joy_mpython.py  ldr_mpython.py  ledsensor_mpython.py  phototrans_mpython.py  potentiometer_mpython.py
MicroPython/BasicDigitalSensors/: button_mpython.py  flame_mpython.py  gas_mpython.py  hall_mpython.py  keypad_mpython.py  pir_mpython.py  sound_mpython.py  vibration_mpython.py
MicroPython/Fingerprint/: fingerdemo_mpython.py  fingersensor_mpython.py
MicroPython/Misc/: hcsr04_mpython.py  ibutton_mpython.py  rotary_mpython.py
MicroPython/Misc/loadcell/: i2c_lcd.py  loadcell_mpython.py
MicroPython/Movement/: adxl345_mpython.py  mma8452_mpython.py  mpu6050_mpython.py  qmc5883l_mpython.py
MicroPython/Pressure/: bme280_mpython.py  bmp180_mpython.py  bmp390_mpython.py
MicroPython/RFID/: mifare_mpython.py  rfid125_mpython.py
MicroPython/Temperature/: LM35_TMP36_mpython.py  aht10_mpython.py  dht_mpython.py  ds18b20_mpython.py  hdc1080_mpython.py  lm75a_mpython.py  mcp9808_mpython.py  thermistor_mpython.py
SDK/AnalogSensors/analoghall/: CMakeLists.txt  analoghall_sdk.c
SDK/AnalogSensors/joystick/: CMakeLists.txt  joy_sdk.cpp
SDK/AnalogSensors/ldr/: CMakeLists.txt  ldr_sdk.c
SDK/AnalogSensors/ledsensor/: CMakeLists.txt  ledsensor_sdk.c
SDK/AnalogSensors/phototrans/: CMakeLists.txt  phototrans_sdk.c
SDK/AnalogSensors/potentiometer/: CMakeLists.txt  potentiometer_sdk.c
SDK/BasicDigitalSensors/button/: CMakeLists.txt  button_sdk.cpp
SDK/BasicDigitalSensors/hall/: CMakeLists.txt  hall_sdk.cpp
SDK/BasicDigitalSensors/keypad/: CMakeLists.txt  keypad_sdk.c
SDK/BasicDigitalSensors/pir/: CMakeLists.txt  pir_sdk.c
SDK/Fingerprint/: CMakeLists.txt  fingerprint_sdk.cpp  fpm10a_sdk.cpp  fpm10a_sdk.h
SDK/Misc/ibutton/: .gitignore  CMakeLists.txt  ibutton_sdk.cpp
SDK/Misc/loadcell/: CMakeLists.txt  hx711.pio  lcd_i2c.c  lcd_i2c.h  loadcell_sdk.c
SDK/Misc/rotary/: CMakeLists.txt  encoder.pio  rotary_sdk.cpp
SDK/Movement/ADXL345/: CMakeLists.txt  adxl345_sdk.cpp
SDK/Movement/MMA8452/: CMakeLists.txt  mma8452_sdk.cpp
SDK/Movement/MPU6050/: CMakeLists.txt  mpu6050_sdk.cpp
SDK/Movement/xMC5x83/: CMakeLists.txt  xMC5x83_sdk.cpp
SDK/Pressure/bme280/: CMakeLists.txt  bme280_sdk.cpp
SDK/Pressure/bmp180/: CMakeLists.txt  bmp180_sdk.cpp
SDK/Pressure/bmp390/: CMakeLists.txt  bmp390_sdk.c
SDK/RFID/rfid125/: CMakeLists.txt  rfid125_sdk.cpp
SDK/Temperature/aht10/: CMakeLists.txt  aht10_sdk.c
SDK/Temperature/dht/: CMakeLists.txt  dht_sdk.cpp  dht_sdk.pio
SDK/Temperature/ds18b20/: CMakeLists.txt  ds18b20_sdk.cpp
SDK/Temperature/hdc1080/: CMakeLists.txt  hdc1080_sdk.c
SDK/Temperature/lm35_tmp36/: CMakeLists.txt  lm35_tmp36_sdk.c
SDK/Temperature/lm75a/: CMakeLists.txt  lm75a_sdk.c
SDK/Temperature/mcp9808/: CMakeLists.txt  mcp9808_sdk.c
SDK/Temperature/thermistor/: CMakeLists.txt  thermistor_sdk.c
(+11 files in other folders)
